# mlflow-cybersec-project

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  run.py
.github/workflows/: ci.yml
config/: config.py  docker-compose.yml  schema.sql
docs/: GKE_N8N_POSTGRESQL_SETUP.md  N8N_MIGRATION_GUIDE.md  QUICK_REFERENCE.md  gke-deployment.md  n8n-integration.md  screenshot-placeholder.md
k8s/: cronjobs.yaml  mlflow.yaml  postgres.yaml  web-app.yaml
src/scripts/: db_status.py  generate_embeddings.py  ingest_news.py  init_db.py  label_news.py  train.py  webhook_receiver.py
src/web/: app.py
src/web/templates/: home.html  label.html
